# WppccProj

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  WOKESPACE  test.txt
APSI/sender/apsi/util/: sm4.h
MPSU/: CMakeLists.txt
MPSU/libvolepsi/include/macoro/: optional.h
MPSU/mpso/: main.cpp
SealPIR/: CMakeLists.txt  README_wppcc.md
SealPIR/wppcc/: CMakeLists.txt  imp_data.cpp  imp_data.hpp  imp_data_test.cpp  invert_mod_test.cpp  main.cpp  pir.hpp  pir_client.cpp  pir_client.hpp  pir_server.cpp  pir_server.hpp  test.cpp
SealPIR/wppcc_test/: CMakeLists.txt  batch_query_test.cpp
benchmark/: README.md  batch_query_test.py  batch_test.csv  batch_test_para.csv  batch_test_res.csv  mpc_test.csv  mpc_test_para.csv  mpc_test_res.csv  multi_party_comput_test.py
data/: _check_test.csv  check.py  check_test.csv  dataset_A.csv  dataset_B.csv  dataset_C.csv
libs/lib/cmake/SEAL-4.1/: SEALTargets.cmake
libs/lib/pkgconfig/: seal.pc
src/: CMakeLists.txt  Problem.md  main.cpp  pir.hpp  pir_client.cpp  pir_client.hpp  pir_server.cpp  pir_server.hpp  scheme2.cpp
src/debug/: debug_log1.txt  debug_log2.txt  debug_log3.txt
test/: CMakeLists.txt  batch_mpc_query_test.cpp  batch_query_test.cpp  gen_rand_pt_test.cpp  imp_data_test.cpp  multi_party_comput_test.cpp
vcpkg/buildtrees/: 0.vcpkg_dep_info.cmake
